syntax = "proto3";

package game.api.constants;
option go_package = "game.api.constants";
option csharp_namespace = "DF.Game.API.Constants";

enum MoveType {
  MOVE_TYPE_UNKNOWN = 0;
  MOVE_TYPE_FORWARD = 1;
  MOVE_TYPE_RETREAT = 2;
}

enum CurveCategory {
  CURVE_CATEGORY_UNKNOWN = 0;
  CURVE_CATEGORY_MOVE = 1;
}

enum CurveType {
  CURVE_TYPE_UNKNOWN = 0;
  CURVE_TYPE_LINEAR_MOVE = 1;
}

enum EntityType {
  ENTITY_TYPE_UNKNOWN = 0;
  ENTITY_TYPE_TANK = 1;
}
